# db-http-gui

./: .gitignore  README.md
client/: CMakeLists.txt  CMakeLists.txt.user.sIiuLG  CMakeLists.txt.user.wkZmod  cfg.ini
client/src/: add-element-dialog.cpp  add-element-dialog.h  backend-manager.cpp  backend-manager.h  connect-widget.cpp  connect-widget.h  main-widget.cpp  main-widget.h  main.cpp  mainwindow.cpp  mainwindow.h  settings-dialog.cpp  settings-dialog.h
server/: requirements.txt  setup.py
server/http_server/: __main__.py  cfg.ini  config.py  crud.py  database.py  models.py  routers.py  schemas.py  utils.py
server/tests/: test_endpoint.py
